# how_to

./: Cargo.toml  README.md
proto/: helloworld.proto
scripts/: launch_jaeger.sh
src/: cache.rs  client.rs  lib.rs  main.rs  serial.rs  server.rs  vga_buffer.rs
tests/: basic_boot.rs
