[package]
name = "nostalgia"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.1"
futures = "0.3.21"
hyper = { version = "0.14.18", features = ["http1", "tcp", "server", "stream"] }
socket2 = "0.4.4"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.1"
tower = { version = "0.4.12", features = ["limit", "util"] }
