[package]
name = "http-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
hyper = { version = "0.14.18", features = ["http1", "server", "tcp"] }
opentelemetry = "0.17.0"
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tokio = { version = "1.18.0", features = ["macros", "rt"] }
tracing = "0.1.34"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-opentelemetry = "0.17.2"
tracing-subscriber = "0.3.11"
uuid = { version = "1.0.0", features = ["v4"] }
