[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
prost = "0.10.1"
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.1"

[build-dependencies]
tonic-build = "0.7.1"
